--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 添加可执行文件
-add_executable(LeetCodeTest main.cpp "leetcode_lisst.h" "leetcode_vector.h" "leetcode_headers.h")
+add_executable(LeetCodeTest 
+	"leetcode_lisst.h"
+	"leetcode_vector.h"
+	"leetcode_headers.h"
+	"leetcode_tree.h"
+	"leetcode_test.cpp"
+)
 
 # 可选：添加头文件搜索路径
 target_include_directories(LeetCodeTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
