build: 重构项目结构并添加头文件
- 将头文件移动到 include/ 目录，源文件移动到 src/ 目录
- 更新 CMakeLists.txt 以反映新的目录结构
- 添加 leetcode_headers.h 作为主包含文件
- 新增链表、树和向量工具头文件
- 添加 .vscode/settings.json 用于 C++ 文件关联
- 更新 .gitignore 忽略 build/ 和 .cache/ 目录
- 更新 README.md 文档以反映新的项目结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 添加可执行文件
 add_executable(LeetCodeTest 
-	"leetcode_list.h"
-	"leetcode_vector.h"
-	"leetcode_headers.h"
-	"leetcode_tree.h"
-	"leetcode_test.cpp"
+	"include/leetcode_list.h"
+	"include/leetcode_vector.h"
+	"include/leetcode_headers.h"
+	"include/leetcode_tree.h"
+	"src/leetcode_test.cpp"
 )
 
 # 可选：添加头文件搜索路径
-target_include_directories(LeetCodeTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(LeetCodeTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
