docs: 更新README并调整项目结构以支持LeetCode本地调试
更新README文档，说明如何使用LEETCODE_LOCAL宏区分本地调试与提交代码。
修改CMakeLists.txt，添加LEETCODE_LOCAL宏定义，确保本地编译时包含必要的头文件和main函数。
重写leetcode_test.cpp中的示例代码，使用条件编译隔离本地调试代码，方便用户直接复制到LeetCode编辑器。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,14 @@
 cmake_minimum_required(VERSION 3.10)
 project(LeetCodeTest)
 
-# ÉèÖÃC++±ê×¼
+# è®¾ç½®C++æ ‡å‡†
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Ìí¼Ó¿ÉÖ´ĞĞÎÄ¼ş
+# æ·»åŠ å®å®šä¹‰
+add_definitions(-DLEETCODE_LOCAL)
+
+# Add executable
 add_executable(LeetCodeTest 
 	"include/leetcode_list.h"
 	"include/leetcode_vector.h"
@@ -15,5 +18,5 @@ add_executable(LeetCodeTest
 	"src/leetcode_test.cpp"
 )
 
-# ¿ÉÑ¡£ºÌí¼ÓÍ·ÎÄ¼şËÑË÷Â·¾¶
+# åŒ…å«å¤´æ–‡ä»¶ç›®å½•
 target_include_directories(LeetCodeTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
